--- a/.github/workflows/pre-commit-pr.yaml
+++ b/.github/workflows/pre-commit-pr.yaml
@@ -4,7 +4,7 @@ permissions:
   pull-requests: write
   contents: write
 jobs:
-  dependabot:
+  pre-commit:
     runs-on: ubuntu-latest
     if: github.event.pull_request.user.login == 'pre-commit-ci[bot]'
     steps:
